--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+a:hover {
+  color: inherit;
+}
 body {
   background-color: #1f1f1f;
+  text-decoration: none;
 }
