--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@ a:hover {
   color: inherit;
 }
 body {
-  background-color: #1f1f1f;
+  /* background-color: #1f1f1f; */
+  /* background-color: yellow; */
   text-decoration: none;
 }
